--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation group: 'io.r2dbc', name: 'r2dbc-postgresql', version: '0.8.13.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation group: 'io.projectreactor', name: 'reactor-tools', version: '3.6.5'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
